Structure of profile changed

--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -28,8 +28,9 @@
           <h2>{{dataUser.firstName}} {{dataUser.lastName}}</h2>
         </div>
 
-        <h4>CEO & Founder, Example</h4>
-        <p>Harvard University</p>
+        <h4>{{dataUser.email}}</h4>
+        <p>{{dataUser.enterprise}}</p>
+
 
       </div>
     </div>
@@ -38,20 +39,20 @@
 
     <div class="col-md-9 clearfix" id="customer-account">
 
-      <p class="lead">Change your personal details or your password here.</p>
-      <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      <p class="lead">Configuración datos de contacto.</p>
+      <p class="text-muted">Manten tus datos actualizados, usamos estos datos para poder contactarte y generar la cotizacion.</p>
 
       <div class="box">
 
         <div class="heading">
-          <h3 class="text-uppercase">Change password</h3>
+          <h3 class="text-uppercase">Cambio Contraseña</h3>
         </div>
 
         <form>
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="password_old">Old password</label>
+                <label for="password_old">Contraseña Antigua</label>
                 <input type="password" class="form-control" id="password_old">
               </div>
             </div>
@@ -59,13 +60,13 @@
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="password_1">New password</label>
+                <label for="password_1">Nueva Contraseña</label>
                 <input type="password" class="form-control" id="password_1">
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="password_2">Retype new password</label>
+                <label for="password_2">Escribe tu nueva contraseña</label>
                 <input type="password" class="form-control" id="password_2">
               </div>
             </div>
@@ -73,7 +74,7 @@
           <!-- /.row -->
 
           <div class="text-center">
-            <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Save new password</button>
+            <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Cambiar contraseña</button>
           </div>
         </form>
 
@@ -83,84 +84,91 @@
 
       <div class="box clearfix">
         <div class="heading">
-          <h3 class="text-uppercase">Personal details</h3>
+          <h3 class="text-uppercase">Datos Personales</h3>
         </div>
 
         <form>
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="firstname">Firstname</label>
-                <input type="text" class="form-control" id="firstname">
+                <label for="firstname">Primer Nombre</label>
+                <input type="text" class="form-control" value="{{dataUser.firstName}}" id="firstname">
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="lastname">Lastname</label>
-                <input type="text" class="form-control" id="lastname">
+                <label for="lastname">Primer Apellido</label>
+                <input type="text" class="form-control" value="{{dataUser.lastName}}" id="lastname">
               </div>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="lastname">Documento</label>
+                <input type="text" value="{{dataUser.uid}}" class="form-control" id="lastname">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="street">Correo Electrónico</label>
+                <input type="text" value="{{dataUser.email}}" class="form-control" id="street">
+              </div>
+            </div>
+
           </div>
           <!-- /.row -->
 
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="company">Company</label>
-                <input type="text" class="form-control" id="company">
+                <label for="company">Compañia</label>
+                <input type="text" value="{{dataUser.enterprise}}" class="form-control" id="company">
               </div>
             </div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label for="street">Street</label>
-                <input type="text" class="form-control" id="street">
-              </div>
-            </div>
+
           </div>
           <!-- /.row -->
 
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <div class="form-group">
-                <label for="city">Company</label>
+                <label for="city">Telefono</label>
                 <input type="text" class="form-control" id="city">
               </div>
             </div>
             <div class="col-sm-6 col-md-3">
               <div class="form-group">
-                <label for="zip">ZIP</label>
+                <label for="zip">Dirección</label>
                 <input type="text" class="form-control" id="zip">
               </div>
             </div>
-            <div class="col-sm-6 col-md-3">
-              <div class="form-group">
-                <label for="state">State</label>
-                <select class="form-control" id="state"></select>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-              <div class="form-group">
-                <label for="country">Country</label>
-                <select class="form-control" id="country"></select>
-              </div>
-            </div>
+
 
             <div class="col-sm-6">
               <div class="form-group">
-                <label for="phone">Telephone</label>
+                <label for="phone">Rol en la compañia</label>
                 <input type="text" class="form-control" id="phone">
               </div>
             </div>
-            <div class="col-sm-6">
+
+            <div class="col-sm-6 ">
               <div class="form-group">
-                <label for="email_account">Email</label>
-                <input type="text" class="form-control" id="email_account">
+                <label for="state">Empresa</label>
+                <input type="text" class="form-control" id="phone">
+              </div>
+            </div>
+            <div class="col-sm-6 ">
+              <div class="form-group">
+                <label for="country">NIT</label>
+                <input type="text" class="form-control" id="phone">
               </div>
             </div>
             <div class="col-sm-12 text-center">
-              <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Save changes</button>
+              <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Guardar Cambios</button>
 
             </div>
+
 
           </div>
 
