[Home]Working in routing of buttons

--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -51,7 +51,7 @@
 
             <form>
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="password_old">Contraseña Antigua</label>
                     <input type="password" class="form-control" id="password_old">
@@ -59,13 +59,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="password_1">Nueva Contraseña</label>
                     <input type="password" class="form-control" id="password_1">
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="password_2">Escribe tu nueva contraseña</label>
                     <input type="password" class="form-control" id="password_2">
@@ -90,13 +90,13 @@
 
             <form>
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="firstname">Primer Nombre</label>
                     <input type="text" class="form-control" value="{{dataUser.firstName}}" id="firstname">
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="lastname">Primer Apellido</label>
                     <input type="text" class="form-control" value="{{dataUser.lastName}}" id="lastname">
@@ -104,13 +104,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="lastname">Documento</label>
                     <input type="text" value="{{dataUser.uid}}" class="form-control" id="lastname">
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="street">Correo Electrónico</label>
                     <input type="text" value="{{dataUser.email}}" class="form-control" id="street">
@@ -121,7 +121,7 @@
               <!-- /.row -->
 
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                   <div class="form-group">
                     <label for="company">Compañia</label>
                     <input type="text" value="{{dataUser.enterprise}}" class="form-control" id="company">
@@ -132,34 +132,34 @@
               <!-- /.row -->
 
               <div class="row">
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-5 col-md-3">
                   <div class="form-group">
                     <label for="city">Telefono</label>
-                    <input type="text" class="form-control" id="city">
+                    <input type="text" class="form-control" id="city" value="{{dataUser.phone}}">
                   </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-5 col-md-3">
                   <div class="form-group">
                     <label for="zip">Dirección</label>
-                    <input type="text" class="form-control" id="zip">
+                    <input type="text" class="form-control" id="zip" value="{{dataUser.address}}">
                   </div>
                 </div>
 
 
-                <div class="col-sm-6">
+                <div class="col-sm-3">
                   <div class="form-group">
                     <label for="phone">Rol en la compañia</label>
                     <input type="text" class="form-control" id="phone">
                   </div>
                 </div>
 
-                <div class="col-sm-6 ">
+                <div class="col-sm-5 ">
                   <div class="form-group">
                     <label for="state">Empresa</label>
                     <input type="text" class="form-control" id="phone">
                   </div>
                 </div>
-                <div class="col-sm-6 ">
+                <div class="col-sm-5 ">
                   <div class="form-group">
                     <label for="country">NIT</label>
                     <input type="text" class="form-control" id="phone">
