--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -25,7 +25,7 @@ _________________________________________________________ -->
             <br />Analisis de maquinaria detallado.</p>
           <p>Nuestros modelos incluyen todo lo necesario
             <br />para que decidas comprarlos.</p>
-          <p><a href="#packages" class="scroll-to btn btn-template-transparent-black">Cotiza Ahora!</a>
+          <p><a (click)="goToQuotation()" class="scroll-to btn btn-template-transparent-black">Cotiza Ahora!</a>
           </p>
 
         </div>
@@ -78,11 +78,11 @@ _________________________________________________________ -->
         <p class="mb-small">Cuando nuestro sistema termina de procesar tu solicitud te enviara un correo electronico con la cotización al correo con el cual estas registrado.Por tanto usa un correo valido para que posteriormente puedas visualizar la cotización.
           <strong>Si no estas registrado sigue el boton de abajo.</strong></p>
 
-        <p><a href="#" class="btn btn-template-main">Registrate Ahora!</a>
+        <p> <a (click)="goToRegister()" class="btn btn-template-main ">Registrate Ahora!</a>
         </p>
       </div>
-      <div class="col-md-6 text-center">
-        <img src="assets/img/template-easy-customize2.png" alt="" class="img-responsive">
+      <div class="col-md-6 text-center ">
+        <img src="assets/img/template-easy-customize2.png " alt=" " class="img-responsive ">
       </div>
     </div>
   </div>
@@ -90,81 +90,81 @@ _________________________________________________________ -->
 
 
 
-<div class="row same-height-row bar background-gray no-mb padding-big text-center-sm">
-  <div class="heading text-center">
+<div class="row same-height-row bar background-gray no-mb padding-big text-center-sm ">
+  <div class="heading text-center ">
     <h1>Los Equipos </h1>
   </div>
-  <div class="container">
-    <div class="col-md-4">
-      <div class="box-simple box-dark same-height" style="height: 319px;">
-        <div class="icon">
-          <i class="fa fa-desktop"></i>
+  <div class="container ">
+    <div class="col-md-4 ">
+      <div class="box-simple box-dark same-height " style="height: 319px; ">
+        <div class="icon ">
+          <i class="fa fa-desktop "></i>
         </div>
         <h3>Webdesign</h3>
-        <p class="text-justify">Puedes acceder a nuestros productos desde la internet debido al trabajo de este equipo, ellos son los encargados de generar posibilitar que entiendas nuestros productos por tanto si tienes sugerencias o dudas sobre su trabajo no dudes en enviarnos
+        <p class="text-justify ">Puedes acceder a nuestros productos desde la internet debido al trabajo de este equipo, ellos son los encargados de generar posibilitar que entiendas nuestros productos por tanto si tienes sugerencias o dudas sobre su trabajo no dudes en enviarnos
           un email.</p>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="box-simple box-dark same-height" style="height: 319px;">
-        <div class="icon">
-          <i class="fa fa-print"></i>
+    <div class="col-md-4 ">
+      <div class="box-simple box-dark same-height " style="height: 319px; ">
+        <div class="icon ">
+          <i class="fa fa-print "></i>
         </div>
         <h3>Automation</h3>
-        <p class="text-justify">Al parecer hacemos magia,pero en realidad es necesario procesar cada una de las solicitudes que nos generas, juntarlas en un documento y responderte lo mas pronto posible.Este equipo realiza esas actividades asi que si tienes dudas o sugerencias
+        <p class="text-justify ">Al parecer hacemos magia,pero en realidad es necesario procesar cada una de las solicitudes que nos generas, juntarlas en un documento y responderte lo mas pronto posible.Este equipo realiza esas actividades asi que si tienes dudas o sugerencias
           acerca de su trabajo con gusto seran atendidas y en la medida de lo posible implementadas.</p>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="box-simple box-dark same-height" style="height: 319px;">
-        <div class="icon">
-          <i class="fa fa-cogs" aria-hidden="true"></i>
+    <div class="col-md-4 ">
+      <div class="box-simple box-dark same-height " style="height: 319px; ">
+        <div class="icon ">
+          <i class="fa fa-cogs " aria-hidden="true "></i>
         </div>
         <h3>Products</h3>
-        <p class="text-justify">Los modelos y diseños personalizados son creados en estos equipos, puedes conocer que genera ca da uno de ellos en la sección de productos.<strong>En la parte superior seleccion un equipo y en cada uno de ellos se te describe el producto que podras recibir.</strong></p>
+        <p class="text-justify ">Los modelos y diseños personalizados son creados en estos equipos, puedes conocer que genera ca da uno de ellos en la sección de productos.<strong>En la parte superior seleccion un equipo y en cada uno de ellos se te describe el producto que podras recibir.</strong></p>
       </div>
     </div>
   </div>
 
 
 
-  <div class="bs-example">
-    <div id="myCarousel" class="carousel slide" data-interval="2000" data-ride="carousel">
+  <div class="bs-example ">
+    <div id="myCarousel " class="carousel slide " data-interval="2000 " data-ride="carousel ">
       <!-- Carousel indicators -->
 
       <!-- Wrapper for carousel items -->
-      <div class="carousel-inner">
-        <div class="active item">
-          <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png" alt="First Slide">
-          <div class="carousel-caption">
+      <div class="carousel-inner ">
+        <div class="active item ">
+          <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png " alt="First Slide ">
+          <div class="carousel-caption ">
 
             <h3>Angular 4</h3>
 
 
           </div>
         </div>
-        <div class="item">
-          <img class="size-image" src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png" alt="Second Slide">
-          <div class="carousel-caption">
+        <div class="item ">
+          <img class="size-image " src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png " alt="Second Slide ">
+          <div class="carousel-caption ">
 
             <p>El lenguaje de programación simple y libre.</p>
 
           </div>
         </div>
-        <div class="item">
-          <img src="https://lh3.googleusercontent.com/Dq-mZ5mmdE6aFPeD61DNlVTwYSI75UwHBYDq_BxBZOMSzCBnQ5OCC4-LjfP42tDlyw=w300" alt="Third Slide">
-          <div class="carousel-caption">
+        <div class="item ">
+          <img src="https://lh3.googleusercontent.com/Dq-mZ5mmdE6aFPeD61DNlVTwYSI75UwHBYDq_BxBZOMSzCBnQ5OCC4-LjfP42tDlyw=w300 " alt="Third Slide ">
+          <div class="carousel-caption ">
 
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
           </div>
         </div>
       </div>
       <!-- Carousel controls -->
-      <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+      <a class="carousel-control left " href="#myCarousel " data-slide="prev ">
+            <span class="glyphicon glyphicon-chevron-left "></span>
         </a>
-      <a class="carousel-control right" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
+      <a class="carousel-control right " href="#myCarousel " data-slide="next ">
+            <span class="glyphicon glyphicon-chevron-right "></span>
         </a>
     </div>
   </div>
@@ -172,17 +172,17 @@ _________________________________________________________ -->
 
 
 
-  <section class="bar background-image-fixed-2 no-mb color-white text-center">
-    <div class="dark-mask"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="icon icon-lg"><i class="fa fa-file-code-o"></i>
+  <section class="bar background-image-fixed-2 no-mb color-white text-center ">
+    <div class="dark-mask "></div>
+    <div class="container ">
+      <div class="row ">
+        <div class="col-md-12 ">
+          <div class="icon icon-lg "><i class="fa fa-file-code-o "></i>
           </div>
           <h1>Deseas saber algo mas?</h1>
-          <p class="lead">Dirigete a la seeccón de contacto y dejanos un mensaje.</p>
-          <p class="text-center">
-            <a href="#" class="btn btn-template-transparent-black btn-lg">Contacto</a>
+          <p class="lead ">Dirigete a la sección de contacto y dejanos un mensaje.</p>
+          <p class="text-center ">
+            <a (click)="goToContact()" class="btn btn-template-transparent-black btn-lg ">Contacto</a>
           </p>
         </div>
 
