--- a/src/app/pages/products/machinery/machinery.component.html
+++ b/src/app/pages/products/machinery/machinery.component.html
@@ -35,6 +35,7 @@
           <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=88ec1ce613f600a3f3cd94dd07a05e9e&width=565&height=317" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
         </div>
       </div>
+
     </div>
 
   </div>
@@ -61,6 +62,9 @@
 
       <div class="col-md-3 text-center">
         <h1>Todo en una sola cotización</h1> Los modelos que recibes contienen medidas exactas de los modelos reales ,informacion de las partes que se encuentran dañadas asi como tambien distribuidores con los cuales puedes obtener los repuestos para dichas maquinaria.
+        <hr>
+        <br>
+        <button (click)="goToQuotation()" type="button" class="btn btn-lg btn-template-main">Cotizar Ahora!</button>
 
       </div>
     </div>
