--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -14,10 +14,10 @@
         </div>
         <div class="col-xs-7">
           <div class="social">
-            <a href="#" class="external facebook" data-animate-hover="pulse" title="Siguenos en Facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="external gplus" data-animate-hover="pulse" title="Siguenos en Google+"><i class="fa fa-google-plus"></i></a>
-            <a href="#" class="external twitter" data-animate-hover="pulse" title="Siguenos en Twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="email" data-animate-hover="pulse" title="Envianos un email"><i class="fa fa-envelope"></i></a>
+            <a href="http://www.facebook.com" class="externa  l facebook" data-animate-hover="pulse" title="Siguenos en Facebook"><i class="fa fa-facebook"></i></a>
+            <a href="http://www.gmail.com" class="external gplus" data-animate-hover="pulse" title="Siguenos en Google+"><i class="fa fa-google-plus"></i></a>
+            <a href="http://www.twitter.com" class="external twitter" data-animate-hover="pulse" title="Siguenos en Twitter"><i class="fa fa-twitter"></i></a>
+            <a href="https://login.unal.edu.co" class="email" data-animate-hover="pulse" title="Envianos un email"><i class="fa fa-envelope"></i></a>
           </div>
 
           <div class="login">
